# classroom-autograder

./: .gitignore  LICENSE  README.md  main.py  models.py  pyproject.toml  requirements.txt  utils.py
auth/: google.py
classroom/: __init__.py  drive.py  users.py
cli/: __init__.py  main.py  questions.py
core/: __init__.py  classroom.py  criteria_generator.py  drive.py  email.py  google.py  grader.py  llm.py  notebook.py  stringfy.py  users.py
examples/: criteria.md
models/: classroom.py
templates/: feedback_email_template.html
