[project]
name = "classroom-autograder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.166.0",
    "google-auth-oauthlib>=1.2.1",
    "magentic>=0.39.2",
    "nbformat>=5.10.4",
    "pydantic>=2.11.2",
    "questionary>=2.1.0",
    "rich>=14.0.0",
]
